--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "hosted-git-info": "^2.8.9",
     "is-svg": "^4.3.1",
     "js-cookie": "^2.2.1",
+    "normalize-url": "^4.5.1",
     "postcss": "^8.2.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
